# ishoo

./: Cargo.toml  Dioxus.toml  README.md  SEMMAP.md  bump_fonts.py  dragging-prototype.html  neti-report.txt  neti.toml  north-star.md  scratch_top.txt
assets/: style.css
docs/: 3-7-26.md
docs/UI concepts/: ui-v2-spike.html
docs/ai-agent-resources/: agent-oath.md  agent-prompt.md
docs/briefs/decisions/: briefs-live-inside-ishoo.md
docs/briefs/guides/: what-briefs-are-in-ishoo.md
docs/briefs/insights/: the-human-is-the-taste-engine.md
docs/briefs/principles/: distillation-over-accumulation.md
docs/briefs/questions/: how-much-brief-structure-is-right.md
docs/briefs/research/: README.md  agent-native-issue-operations.md  desktop-interaction-accessibility-and-visualization.md  local-first-git-backed-architecture.md
docs/issues/: issues-active.md  issues-backlog.md  issues-done.md
src/: main.rs  model.rs  ui.rs
src/model/: cli.rs  lint.rs  mod.rs  parse.rs  workspace.rs
src/ui/: app.rs  components.rs  feed_lens.rs  mod.rs  scroll.rs  styles.rs  styles_viz.rs  toast.rs  views.rs  welcome.rs
src/ui/views/: board.rs  feed.rs  mod.rs  physics.rs  viz.rs
src/ui/views/feed/: card.rs
src/ui/views/physics/: tests.rs
