[package]
name = "ishoo"
version = "0.5.0"
edition = "2021"
description = "A portable markdown-based issue tracker with a beautiful Dioxus desktop UI"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["time", "rt", "sync"] }
pulldown-cmark = "0.13.1"
notify = "8"

[dev-dependencies]
tempfile = "3"
